--- a/puddle/core/templates/core/base.html
+++ b/puddle/core/templates/core/base.html
@@ -28,6 +28,12 @@
                         <a href="{% url 'dashboard:index' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl  hover:bg-gray-700">
                             Dashboard
                         </a>
+                        <a href="{% url 'wishlist:index' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl  hover:bg-gray-700">
+                            Wish List
+                        </a>
+                        <a href="{% url 'core:logout' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl  hover:bg-gray-700">
+                            Log Out
+                        </a>
                     {% else %}
                         <a href="{% url 'core:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">
                             Sign Up
@@ -35,6 +41,7 @@
                         <a href="{% url 'core:login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl  hover:bg-gray-700">
                             Log In
                         </a>
+                        
                     {% endif %}
 
                 </div>
