--- a/puddle/item/templates/item/detail.html
+++ b/puddle/item/templates/item/detail.html
@@ -25,6 +25,7 @@
             </div>
         {% else %}
             <a href="{% url 'conversation:new' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Contact Seller</a>
+            <a href="{% url 'item:add_to_wishlist' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl">Add to wishlist</a>
 
         {% endif %}
     </div>
