--- a/puddle/core/templates/core/base.html
+++ b/puddle/core/templates/core/base.html
@@ -31,15 +31,7 @@
                     </a>
                     {% if request.user.is_authenticated %}
                        
-                        <a href="{% url 'conversation:inbox' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">
-                            Inbox
-                        </a>
-                        <a href="{% url 'dashboard:index' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl  hover:bg-teal-700">
-                            Dashboard
-                        </a>
-                        <a href="{% url 'wishlist:index' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl  hover:bg-teal-700">
-                            Wish List
-                        </a>
+                        
                         <a href="{% url 'core:logout' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl  hover:bg-gray-700">
                             Log Out
                         </a>
@@ -65,8 +57,9 @@
                     <h3 class="mb-5 font-semibold text-gray-400 ">
                         About
                     </h3>
-                    <p class="text-lg text-gray-500">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint temporibus error sit aliquam animi dolores eius, veniam sapiente harum non eos autem! Tenetur, minus. Architecto rem eum harum at pariatur.
+                    <p class="text-lg text-gray-500 font-sans">
+                        Welcome to Our Marketplace, the vibrant online destination where unique products meet exceptional service. Founded on the principles of community, quality, and trust, we empower artisans, creators, and entrepreneurs to showcase their craftsmanship to a global audience. Our platform is more than just a marketplace; it's a gathering space for those who appreciate the artistry and aspire to a more personalized shopping experience. From rare finds to everyday essentials, our commitment to diversity and sustainability is evident in every item. We believe in the power of commerce that connects, and every purchase made here supports individual passion and collective progress. Join us in our journey to make shopping an adventure filled with discovery and delight.
+
                     </p>
             </div>
             <div class="w-1/3">
